--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@ footer p {
         <h3>Internship Experience at Ministry Of Works & Transport</h3>
         <p class="date">June 2024 - August 2024</p>
         <ul class="experience-list">
-            <li><strong>Data Management:</strong> Assisted in the collection, entry, and organization of patient records.</li>
-            <li><strong>System Support:</strong> Provided technical support for hospital staff on Health Information Systems.</li>
-            <li><strong>Report Generation:</strong> Generated and formatted various reports for the hospital's clinical departments.</li>
-            <li><strong>Software Maintenance:</strong> Maintained and updated software systems used for patient management, scheduling, and billing.</li>
-            <li><strong>Training and User Support:</strong> Conducted training sessions for new hospital staff on HIS best practices.</li>
+            <li><strong>File transfer:</strong> </li>
+            <li><strong>File dressing:</strong> </li>
+            <li><strong>Record shelfing:</strong> </li>
+            <li><strong>Repography and shredding:</strong> </li>
+            <li><strong>File and records organization:</strong> </li>
         </ul>
     </div>
 </div>
