--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Personal Website</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <section id="header">
+        <header>
+        <h1> Kisakye Alice - BLIS Student at COCIS</h1>
+        <div id="photo">
+            <img src="profile.jpg" alt="alice Kisakye" class="photo">
+        </div>
+        <nav>
+            <a href="#schools">Schools</a> |
+            <a href="#hobbies">Hobbies</a> |
+            <a href="#work">Work Experience</a> |
+            <a href="#career_prospects">Career Prospects</a>
+        </nav>
+        </header>
+    </section>
+
+    <section id="schools">
+        <h2>Schools Attended</h2>
+        <div class="schools-grid">
+            <div>2006<br>ABI Kindergarten</div>
+            <div>2012<br>Hillside PS</div>
+            <div>2016<br>Seeta High School</div>
+            <div>2020<br>Namugongo SS</div>
+            <div>2023<br>Makerere University</div>
+        </div>
+    </section>
+
+    <section id="work">
+        <h2>Work Experience</h2>
+        <table>
+            <tr>
+                <th>Year</th>
+                <th>Position</th>
+                <th>Company</th>
+            </tr>
+            <tr>
+                <td>2023</td>
+                <td>IT Intern</td>
+                <td>Huawei Technologies</td>
+            </tr>
+            <tr>
+                <td>2024</td>
+                <td>Junior Developer</td>
+                <td>BMX Solutions</td>
+            </tr>
+        </table>
+    </section>
+
+    <section id="hobbies">
+        <h2>Hobbies</h2>
+        <ul>
+            <li>Reading tech blogs</li>
+            <li>Coding</li>
+            <li>Photography</li>
+            <li>Playing chess</li>
+            <li>swimming</li>
+            <li>watching movies</li>
+        </ul>
+    </section>
+
+    <section id="career_prospects">
+        <h2>Career Prospects</h2>
+        <ul>
+            <li>Become a software engineer</li>
+            <li>Work in cybersecurity</li>
+            <li>Develop innovative ICT solutions</li>
+            <li>Lead a tech startup</li>
+        </ul>
+    </section>
+</body>
+</html>
 
