--- a/biodata.html
+++ b/biodata.html
@@ -3,15 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bio Data</title>
+    <title>Bio Data - Alice Kisakye</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Bio Data</h1>
-    </header>
-    <section>
-        <p>Details about Alice's personal information, background, etc.</p>
+    <section class="bio-header">
+        <h1>Bio Data - Kisakye Alice</h1>
+    </section>
+
+    <section class="bio-section" id="personal-info">
+        <h2>Basic Personal Information</h2>
+        <ul>
+            <li><strong>Full Name:</strong> Kisakye Alice</li>
+            <li><strong>Date of Birth:</strong> January 1, 2000</li>
+            <li><strong>Email:</strong> alicekisakye@gmail.com</li>
+            <li><strong>Phone:</strong> +256 7809544396</li>
+            <li><strong>Nationality:</strong>Ugandan</li>
+            <li><strong>Address</strong>:</strong> Makerere, Kampala</li>
+        </ul>
+    </section>
+
+    <section class="bio-section" id="about-me">
+        <h2>About Me</h2>
+        <p>I am a passionate BLIS student at COCIS, eager to develop innovative ICT solutions. I love coding, am dedicated to personal growth, and aspire to make a significant impact in the tech industry.</p>
+    </section>
+
+    <section class="bio-section" id="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>Programming: HTML, CSS, JavaScript, Python</li>
+            <li>Web Development: Frontend and Backend Development</li>
+            <li>Database Management: MySQL, Firebase</li>
+            <li>Networking: Network Segregation, VPNs, Cybersecurity Basics</li>
+            <li>Team work and collaboration skills</li>
+            <li>Strong communication skills</li>
+            <li>efficient problem solving skills</li>
+        </ul>
+    </section>
+
+    <section class="bio-section" id="referees">
+        <h2>Referees</h2>
+        <ul>
+            <li><strong>Dr. </strong> - Head of Department, COCIS</li>
+            <li><strong>Mr Lwanga Charles</strong> - Deputy Academics at Seeta High school</li>
+        </ul>
     </section>
 </body>
 </html>
