--- a/biodata.html
+++ b/biodata.html
@@ -44,8 +44,11 @@
     <section class="bio-section" id="referees">
         <h2>Referees</h2>
         <ul>
-            <li><strong>Dr. </strong> - Head of Department, COCIS</li>
-            <li><strong>Mr Lwanga Charles</strong> - Deputy Academics at Seeta High school</li>
+            <li><strong>Dr. balikudembe Denis</strong> - Dean SCIT
+             <br> Denisb@mgail.com</li>
+            <li><strong>Mr Lwanga Charles</strong> - Deputy Academics at Seeta High school <br>
+            lwangacharles@gmail.com
+            </li>
         </ul>
     </section>
 </body>
