--- a/biodata.html
+++ b/biodata.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bio Data - Alice Kisakye</title>
+    <title>Bio Data</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section class="bio-header">
-        <h1>Bio Data - Kisakye Alice</h1>
+        <h1>Bio Data</h1>
     </section>
 
     <section class="bio-section" id="personal-info">
-        <h2>Basic Personal Information</h2>
+        <h2>Personal Information</h2>
         <ul>
             <li><strong>Full Name:</strong> Kisakye Alice</li>
             <li><strong>Date of Birth:</strong> January 1, 2000</li>
@@ -20,6 +20,7 @@
             <li><strong>Phone:</strong> +256 7809544396</li>
             <li><strong>Nationality:</strong>Ugandan</li>
             <li><strong>Address</strong>:</strong> Makerere, Kampala</li>
+            <li><strong>Languages spoken</strong>:</strong> English and Luganda</li>
         </ul>
     </section>
 
@@ -44,7 +45,7 @@
     <section class="bio-section" id="referees">
         <h2>Referees</h2>
         <ul>
-            <li><strong>Dr. balikudembe Denis</strong> - Dean SCIT
+            <li><strong>Dr. Balikudembe Denis</strong> - Dean SCIT
              <br> Denisb@mgail.com</li>
             <li><strong>Mr Lwanga Charles</strong> - Deputy Academics at Seeta High school <br>
             lwangacharles@gmail.com
