--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div id="sidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeSidebar()">&times;</a>
-        <a href="bio-data.html">Bio Data</a>
+        <a href="biodata.html">Bio Data</a>
         <a href="#schools">Schools</a> 
         <a href="#hobbies">Hobbies</a> 
         <a href="#work">Work Experience</a> 
