--- a/biodata.html
+++ b/biodata.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <section class="bio-header">
+        <div> <a href="index.html>Home</a></div>
         <h1>Bio Data</h1>
     </section>
 
