--- a/biodata.html
+++ b/biodata.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section class="bio-header">
-        <div> <a href="index.html>Home</a></div>
+      <a href="index.html" style="float: right;">Home</a>
         <h1>Bio Data</h1>
     </section>
 
